--- a/vignettes/Eng_Procedure.Rmd
+++ b/vignettes/Eng_Procedure.Rmd
@@ -25,7 +25,7 @@ library(dxpr)
 ```{r setup, echo = FALSE, message = FALSE}
 knitr::opts_chunk$set(collapse = T, comment = "#>")
 options(tibble.print_min = 4L, tibble.print_max = 4L)
-devtools::install_github("DHLab-TSENG/dxpr")
+#devtools::install_github("DHLab-TSENG/dxpr")
 library(dxpr)
 ```
 
