--- a/vignettes/Eng_Diagnosis.Rmd
+++ b/vignettes/Eng_Diagnosis.Rmd
@@ -13,20 +13,20 @@ vignette: >
 
 The proposed open-source dxpr package is a software tool aimed at expediting an integrated analysis of electronic health records (EHRs). By implementing dxpr package, it is easier to integrate, analyze, and visualize clinical data.
 
-In this part, the instruction of how dxpr package workes with diagnosis records is provided. 
+In this part, the instruction of how dxpr package works with diagnosis records is provided. 
 
 ### Development version
 
 ```r
-install.packages("devtools")
+install.packages("remotes")
 # Install development version from GitHub
-devtools::install_github("DHLab-TSENG/dxpr")
+remotes::install_github("DHLab-TSENG/dxpr")
 library(dxpr)
 ```
 ```{r setup, echo = FALSE, message = FALSE}
 knitr::opts_chunk$set(collapse = T, comment = "#>")
 options(tibble.print_min = 4L, tibble.print_max = 4L)
-#devtools::install_github("DHLab-TSENG/dxpr")
+#remotes::install_github("DHLab-TSENG/dxpr")
 library(dxpr)
 ```
 
