--- a/vignettes/Chi_Procedure.Rmd
+++ b/vignettes/Chi_Procedure.Rmd
@@ -17,15 +17,15 @@ cat(utils::packageDescription("dxpr")$Description)
 ```
 ### 安裝套件
 ```r
-install.packages("devtools")
+install.packages("remotes")
 # Install development version from GitHub
-devtools::install_github("DHLab-TSENG/dxpr")
+remotes::install_github("DHLab-TSENG/dxpr")
 library(dxpr)
 ```
 ```{r setup, echo = FALSE, message = FALSE}
 knitr::opts_chunk$set(collapse = T, comment = "#>")
 options(tibble.print_min = 4L, tibble.print_max = 4L)
-#devtools::install_github("DHLab-TSENG/dxpr")
+#remotes::install_github("DHLab-TSENG/dxpr")
 library(dxpr)
 ```
 ### ICD-PCS-CODE 格式對照
