--- a/vignettes/Eng_Procedure.Rmd
+++ b/vignettes/Eng_Procedure.Rmd
@@ -17,21 +17,21 @@ In this part, the instruction of how dxpr package workes with procedure records 
 
 ### Development version
 ```r
-install.packages("devtools")
+install.packages("remotes")
 # Install development version from GitHub
-devtools::install_github("DHLab-TSENG/dxpr")
+remotes::install_github("DHLab-TSENG/dxpr")
 library(dxpr)
 ```
 ```{r setup, echo = FALSE, message = FALSE}
 knitr::opts_chunk$set(collapse = T, comment = "#>")
 options(tibble.print_min = 4L, tibble.print_max = 4L)
-#devtools::install_github("DHLab-TSENG/dxpr")
+#remotes::install_github("DHLab-TSENG/dxpr")
 library(dxpr)
 ```
 
 ### Data Format
 
-dxpr (procedute part) is used to pre-process procedure codes of EHRs. To execute functions in dxpr, the EHR data input should be a data frame object in R, and contain at least three columns: patient ID, ICD procedure codes and date.
+dxpr (procedure part) is used to pre-process procedure codes of EHRs. To execute functions in dxpr, the EHR data input should be a data frame object in R, and contain at least three columns: patient ID, ICD procedure codes and date.
 
 Column names or column order of these three columns does not need to necessarily follow a rule. Each column name will be pass as argument. Detailed information of required data type of every column and argument of functions can be found in the reference section.
 
